@@ -1,19 +1,28 @@
 package dev.irondesign.zpoolmonitor.service;
 
+import org.springframework.stereotype.Service;
+
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.util.List;
 
+@Service
 public class CommandServiceImpl implements CommandService {
+
     @Override
     public String executeCommand(String command) {
         StringBuilder output = new StringBuilder();
         try {
-            Process process = Runtime.getRuntime().exec(command);
+            ProcessBuilder processBuilder = new ProcessBuilder(List.of(command.split(" ")));
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
+
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
                 String line;
                 while ((line = reader.readLine()) != null) {
                     output.append(line).append("\n");
                 }
+
             }
 
         } catch (Exception e) {
